[metadata]
name = pynvraw 
version = 0.0.2
author = Vasily
author_email = just.one.man@yandex.ru
description = Pure-Python wrapper for obscure nvapi 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JustAMan/pynvraw
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
